fix misaligned nav buttons

--- a/assets/stylesheets/_screen.scss
+++ b/assets/stylesheets/_screen.scss
@@ -314,6 +314,7 @@ cite {
 }
 
 .nav-item span {
+  display: inline-block;
   cursor: pointer;
 }
 
